force-app/main/default/objects/Approval_Matrix__c/Approval_Matrix__c.object-meta.xml
<CustomObject>
    <label>Approval Matrix</label>
    <nameField>
        <displayFormat>ApprovalMatrix - {000000}</displayFormat>
        <label>Approval Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>