force-app/main/default/objects/Approval_Matrix__c/fields/New_Team__c.field-meta.xml
<CustomField>
    <fullName>New_Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Team</valueSetName>
    </valueSet>
</CustomField>