force-app/main/default/objects/Approval_Matrix__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account_Handover</fullName>
            </value>
            <value>
                <fullName>Internal - ADM/ACM</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>Billing Discrepancy</fullName>
            </value>
            <value>
                <fullName>Service Request</fullName>
            </value>
            <value>
                <fullName>Sales Offer</fullName>
            </value>
            <value>
                <fullName>Group Waivers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>