force-app/main/default/objects/Approval_Matrix__c/fields/Waiver_Type__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Type__c</fullName>
    <label>Waiver Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lounge Access - Qantas Club</fullName>
            </value>
            <value>
                <fullName>Lounge Access - Qantas Domestic Business Lounge</fullName>
            </value>
            <value>
                <fullName>Lounge Access - Qantas First Lounge</fullName>
            </value>
            <value>
                <fullName>Lounge Access - Qantas International Business Lounge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>