force-app/main/default/objects/Approval_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Manager_Type__c</columns>
    <columns>New_Team__c</columns>
    <columns>Portfolio__c</columns>
    <columns>Manager__c</columns>
    <columns>Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Level_3_Approver__c</columns>
    <columns>Region__c</columns>
    <columns>Team_Lead__c</columns>
    <columns>Team__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>