force-app/main/default/objects/Approval_Matrix__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Team_Lead__c</columns>
    <columns>Manager__c</columns>
    <columns>Level_3_Approver__c</columns>
    <columns>Region__c</columns>
    <columns>New_Team__c</columns>
    <columns>Type__c</columns>
    <columns>Waiver_Type__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>