force-app/main/default/objects/Approval_Matrix__c/listViews/Group_Waivers.listView-meta.xml
<ListView>
    <fullName>Group_Waivers</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Region__c</columns>
    <columns>Team_Lead__c</columns>
    <columns>Manager__c</columns>
    <columns>Level_3_Approver__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Service Request</value>
    </filters>
    <label>Group Waivers</label>
</ListView>