force-app/main/default/objects/Approval_Matrix__c/listViews/Internal_ADM_ACM.listView-meta.xml
<ListView>
    <fullName>Internal_ADM_ACM</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Region__c</columns>
    <columns>Team_Lead__c</columns>
    <columns>Manager__c</columns>
    <columns>Level_3_Approver__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Internal - ADM/ACM</value>
    </filters>
    <label>Internal ADM/ACM</label>
</ListView>