force-app/main/default/objects/Approval_Matrix__c/listViews/Lounge_Access.listView-meta.xml
<ListView>
    <fullName>Lounge_Access</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Waiver_Type__c</columns>
    <columns>Cost_of_sale__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Service Request</value>
    </filters>
    <label>Lounge Access</label>
</ListView>