force-app/main/default/objects/Approval_Matrix__c/listViews/MZ_Account_HAndover.listView-meta.xml
<ListView>
    <fullName>MZ_Account_HAndover</fullName>
    <columns>Type__c</columns>
    <columns>Manager_Type__c</columns>
    <columns>New_Team__c</columns>
    <columns>Portfolio__c</columns>
    <columns>Manager__c</columns>
    <columns>Region__c</columns>
    <columns>Team_Lead__c</columns>
    <columns>Level_3_Approver__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Account_Handover</value>
    </filters>
    <label>Account Handover</label>
</ListView>